<resources>
    <string name="app_name">MovTix</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="desk_now_playing">Lebih mudah untuk mengetahui \n film yang sedang tampil</string>
    <string name="desk_presale">Tidak khawatir ketinggalan \n  update film terbaru</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="desk_cashless">Gunakan e-wallet untuk \n transaksi tiket nonton</string>
    <string name="cashless">Cashless</string>
    <string name="memulai">Memulai</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Welcome,\n Willy Saputra</string>
    <string name="simpan_dan_lanjutkan">Simpan Dan Lanjutkan</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="Pemeran">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="empty">Empty</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="items">Items</string>
    <string name="nomor_seat">Seat No. C1</string>
    <string name="total">Total Harus dibayar</string>
    <string name="wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="saldo_tidak_cukup">Saldo pada e-wallet kamu tidak mencukupi \nuntuk melakukan transaksi</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="desk_tiket_">Tiket telah berhasil dibeli dan \nselamat menikmati film</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun">Daftar Akun Baru</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datetime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="tutup">Tutup</string>
    <string name="top_up_saldo">Top Up Saldo</string>
</resources>
